--- a/templates/articles/list.html.twig
+++ b/templates/articles/list.html.twig
@@ -15,10 +15,18 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">{{ article.title }}</h5>
-                            <h6 class="card-title">{{ article.createdAt|date('d/m/y') }}</h6>
+                            {# <h6 class="card-title">{{ article.createdAt|date('d/m/y') }}</h6> #}
                             <p class="card-text">{{ article.content }}</p>
-                            <p class="card-text">{{ article.comment.message }}</p>
                             <a class="btn btn-dark" href="{{ path("blog_view_article", {'id': article.id}) }}">Lien de l'article</a>
+                            {% for comment in article.comments %}
+                                <p class="card-text mt-2"><small class="text-body-secondary">{{ comment.createdAt|date('d/m/y') }} par {{ comment.author }}</small></p>
+                                <p class="card-text"><small class="text-body-secondary">{{ comment.message }}</small></p>
+                                {% if not loop.last %}
+                                    <hr>
+                                {% endif %}
+                                {% else %}
+                                    <p class="card-text mt-2"><small class="text-body-secondary">Pas de commentaire</small></p>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
