--- a/templates/articles/lastArticles.html.twig
+++ b/templates/articles/lastArticles.html.twig
@@ -13,7 +13,7 @@
        <div class="card mb-3" style="width: 18rem;">
            <div class="card-body">
                <h5 class="card-title">{{ article.title }}</h5>
-               <p class="card-text">{{ article.content }}</p>
+               <p class="card-text">{{ article.content|truncate(30, true) }}</p>
                <a class="btn btn-dark"  href="{{ path("blog_view_article", {'id': article.id}) }}">Lien de l'article</a>
            </div>
        </div>
