--- a/templates/articles/viewCategory.html.twig
+++ b/templates/articles/viewCategory.html.twig
@@ -5,7 +5,6 @@
         <div class="mb-3 mb-sm-0 mt-3 col-md-4">
             <div class="card">
                 <div class="card-body">
-
                         {%  for category in article.categories %}
                             <small class="text-body-secondary">{{ category.name }}
                                 {% if not loop.last %}
@@ -17,12 +16,12 @@
                         <h5 class="card-title">{{ article.title }}</h5>
 
                         {# <h6 class="card-title">{{ article.createdAt|date('d/m/y') }}</h6> #}
-                        <p class="card-text">{{ article.content }}</p>
+                        <p class="card-text">{{ article.content|truncate(50, true) }}</p>
                         <a class="btn btn-dark" href="{{ path("blog_view_article", {'id': article.id}) }}">Lien de l'article</a>
                         <hr>
                         {% for comment in article.comments %}
                             <p class="card-text mt-2"><small class="text-body-secondary">{{ comment.createdAt|date('d/m/y') }} par {{ comment.author }}</small></p>
-                            <p class="card-text"><small class="text-body-secondary">{{ comment.message }}</small></p>
+                            <p class="card-text"><small class="text-body-secondary">{{ comment.title }}</small></p>
                             {% if not loop.last %}
                                 <hr>
                             {% endif %}
