--- a/templates/articles/edit.html.twig
+++ b/templates/articles/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends 'blog.html.twig' %}
-{% block h1 %}<h1>Modification d'un article</h1>{% endblock %}
+{% block h1 %}<h1>{{ 'Modification dun article'|trans }}</h1>{% endblock %}
 {% block content %}
     {% include 'form.html.twig' %}
 {% endblock %}
