--- a/templates/articles/add.html.twig
+++ b/templates/articles/add.html.twig
@@ -1,5 +1,13 @@
 {% extends 'blog.html.twig' %}
-{% block h1 %}<h1>Ajout d'article</h1>{% endblock %}
+{% block h1 %}<h1>{{ "Ajout d'un article"|trans }}</h1>{% endblock %}
 {% block content %}
+    {% for messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
     {% include 'form.html.twig' %}
+
 {% endblock %}
