--- a/templates/articles/lastArticles.html.twig
+++ b/templates/articles/lastArticles.html.twig
@@ -1,7 +1,7 @@
 {% block left_menu %}
     <div class="card mb-5" style="width: 18rem;">
         <div class="card-header">
-            Catégories
+            {{ 'Categories'|trans }}
         </div>
         {%  for categorie in categories %}
                 <ul class="list-group list-group-flush">
@@ -14,7 +14,7 @@
            <div class="card-body">
                <h5 class="card-title">{{ article.title }}</h5>
                <p class="card-text">{{ article.content|truncate(30, true) }}</p>
-               <a class="btn btn-dark"  href="{{ path("blog_view_article", {'id': article.id}) }}">Lien de l'article</a>
+               <a class="btn btn-dark"  href="{{ path("blog_view_article", {'id': article.id}) }}">{{ "Voir l'article"|trans }}</a>
            </div>
        </div>
     {% endfor %}
