--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,14 +14,29 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link"  href="{{ path("home") }}">Accueil</a>
+                            <a class="nav-link" href="{{ path('home', {'_locale' : 'fr' } ) }}">FR</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path("blog_show_list") }}">Blog</a>
+                            <a class="nav-link" href="{{ path('home', {'_locale' : 'en' } )}}">EN</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path("a_propos") }}">A propos</a>
+                            <a class="nav-link" href="{{ path('home', {'_locale' : app.request.locale }) }}">{% trans %}Accueil{% endtrans %}</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path("blog_show_list", {'_locale' : app.request.locale }) }}">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path("a_propos", {'_locale' : app.request.locale }) }}">{% trans %}A propos{% endtrans %}</a>
+                        </li>
+                        {% if app.user is not null %}
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{{ path('/app_logout', {'_locale' : app.request.locale }) }}">{{ 'Déconnexion'|trans }} </a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{{ path('app_login', {'_locale' : app.request.locale }) }}">{{ 'Connexion'|trans }}</a>
+                            </li>
+                        {% endif %}
                         {% block menu %}
                         {% endblock %}
                     </ul>
@@ -39,11 +54,11 @@
                     <div class="block_right col-9">
                         <div class="title mt-5 mb-5">
                             {% block h1 %}
-                                <h1>Accueil</h1>
+                                <h1>{{ 'Accueil'|trans }}</h1>
                             {% endblock %}
                         </div>
                         {% block content %}
-                            Du contenu pour la page d'accueil
+                            {{ 'Contenu accueil'|trans }}
                         {% endblock %}
                     </div>
                 </div>
