--- a/templates/articles/list.html.twig
+++ b/templates/articles/list.html.twig
@@ -19,16 +19,16 @@
 
                             {# <h6 class="card-title">{{ article.createdAt|date('d/m/y') }}</h6> #}
                             <p class="card-text">{{ article.content | truncate(100, true) }}</p>
-                            <a class="btn btn-dark" href="{{ path("blog_view_article", {'id': article.id}) }}">Lien de l'article</a>
+                            <a class="btn btn-dark" href="{{ path("blog_view_article", {'id': article.id}) }}">{{ "Voir l'article"|trans }}</a>
                             <hr>
                             {% for comment in article.comments %}
-                                <p class="card-text mt-2"><small class="text-body-secondary">{{ comment.createdAt|date('d/m/y') }} par {{ comment.author }}</small></p>
+                                <p class="card-text mt-2"><small class="text-body-secondary">{{ comment.createdAt|date('d/m/y') }} {{ "par"|trans }} {{ comment.author }}</small></p>
                                 <p class="card-text"><small class="text-body-secondary">{{ comment.title }}</small></p>
                                 {% if not loop.last %}
                                     <hr>
                                 {% endif %}
                                 {% else %}
-                                    <p class="card-text mt-2"><small class="text-body-secondary">Pas de commentaire</small></p>
+                                    <p class="card-text mt-2"><small class="text-body-secondary">{{ "Pas de commentaire"|trans }}</small></p>
                             {% endfor %}
                         </div>
                     </div>
