--- a/templates/articles/list.html.twig
+++ b/templates/articles/list.html.twig
@@ -1,6 +1,6 @@
 {%  extends 'blog.html.twig' %}
 {% block h1 %}
-    <h1>Liste des articles</h1>
+    <h1>{{ "Liste des articles"|trans }} </h1>
 {% endblock %}
 {% block content_blog %}
     <div class="row">
