--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}{{ "Page de connexion"|trans }}{% endblock %}
 
 {% block content %}
 <form method="post">
@@ -10,22 +10,23 @@
 
     {% if app.user %}
         <div class="mb-3">
-            Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
+            {{ "Vous êtes connecté en tant que"|trans }}{{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">{{ "Déconnexion"|trans }}</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h1 class="h3 mb-3 font-weight-normal">{{ "Connexion"|trans }}</h1>
+                <label for="inputEmail">Email</label>
+                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+                <label class="mt-4" for="inputPassword">{{ "Mot de passe"|trans }}</label>
+                <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                <button class="btn btn-lg btn-dark mt-4" type="submit">{{ "Connexion"|trans }}</button>
+            </div>
+        </div>
+    </div>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    <button class="btn btn-lg btn-dark mt-4" type="submit">
-        Connexion
-    </button>
 </form>
 {% endblock %}
