--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/public/style/css/style.css">
+        <link rel="stylesheet" href="{{ asset('style/css/style.css') }}">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -29,8 +29,10 @@
                             <a class="nav-link" href="{{ path("a_propos", {'_locale' : app.request.locale }) }}">{% trans %}A propos{% endtrans %}</a>
                         </li>
                         {% if app.user is not null %}
+
                             <li class="nav-item active">
-                                <a class="nav-link" href="{{ path('/app_logout', {'_locale' : app.request.locale }) }}">{{ 'Déconnexion'|trans }} </a>
+                                <span></span>
+                                <a class="nav-link" href="{{ path('app_logout', {'_locale' : app.request.locale }) }}">{{ 'Déconnexion'|trans }} {{ app.user.firstName }} {{ app.user.lastName }}</a>
                             </li>
                         {% else %}
                             <li class="nav-item active">
