--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -6,13 +6,13 @@
     {% block h1 %}
         <h1>{{ "Bienvenue sur le blog"|trans }}</h1>
     {% endblock %}
-
     {% block menu %}
-        <li class="nav-item">
-            <a class="nav-link" href="{{ path("blog_add_article") }}">{{ 'Ajouter un article'|trans }}</a>
-        </li>
+        {% if 'ROLE_ADMIN' in app.user.roles %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path("blog_add_article") }}">{{ 'Ajouter un article'|trans }}</a>
+            </li>
+        {% endif %}
     {% endblock %}
-
     {% block content %}
         {% block content_blog %}
         {% endblock %}
