--- a/templates/articles/view.html.twig
+++ b/templates/articles/view.html.twig
@@ -19,8 +19,10 @@
                 <h5 class="card-title m-0">{{ articles.title }}</h5>
 
                 <p class="card-text mt-2">{{ articles.content }}</p>
-                <a href="{{ path( 'blog_edit_article', {'id' : articles.id} ) }}" class="btn btn-dark">{{ "Modifier"|trans }}</a>
-                <a href="{{ path( 'blog_delete_article', {'id' : articles.id} ) }}" class="btn btn-secondary">{{ "Supprimer"|trans }}</a>
+                {% if 'ROLE_ADMIN' in app.user.roles %}
+                    <a href="{{ path( 'blog_edit_article', {'id' : articles.id} ) }}" class="btn btn-dark">{{ "Modifier"|trans }}</a>
+                    <a href="{{ path( 'blog_delete_article', {'id' : articles.id} ) }}" class="btn btn-secondary">{{ "Supprimer"|trans }}</a>
+                {% endif %}
             </div>
         </div>
     {% endblock %}
